# gochessplusplus.dev

./: .env.example  .gitignore  README.md  Taskfile.yml  docker-compose.dev.yml  docker-compose.prod.yml
.github/: dependabot.yml
.github/workflows/: client-ci.yml  deploy-dev.yml  deploy-prod.yml  engine-ci.yml  server-ci.yml
client/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
client/src/: index.css  main.tsx
client/src/api/: api.ts  index.ts
client/src/api/v1/: health.ts
client/src/app/: app.app.tsx  app.config.ts
client/src/components/: index.ts
client/src/components/healthStatus/: healthStatus.component.tsx  healthStatus.props.ts  index.ts
client/src/enums/system/: index.ts  queryKey.enum.ts
client/src/interfaces/api/health/: healthResponse.interface.ts  index.ts
client/src/interfaces/app/: index.ts
client/src/models/api/: apiError.model.ts  index.ts
client/src/views/home/: home.view.tsx
engine/: .clang-format  .gitignore  CMakeLists.txt
engine/src/: main.cpp
engine/src/board/: bitboard.cpp  bitboard.h
engine/tests/: test.cpp
engine/tests/board/: bitboard_test.cpp
server/: .dockerignore  .gitignore  Dockerfile  go.mod
server/cmd/api/: main.go
server/internal/api/: health.go  json.go  routes.go  server.go
server/internal/config/: config.go
